code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_13.wast
(assert_invalid
  (module (func $type-empty-i32 (result i32) (block)))
  "type mismatch"
)